# controllers/authController.js
@@ -1,6 +1,6 @@
-const User = require('../models/user');
-const jwt = require('jsonwebtoken');
-const bcrypt = require('bcryptjs');
+const User = require("../models/user");
+const jwt = require("jsonwebtoken");
+const bcrypt = require("bcryptjs");
 
 // Register
 exports.register = async (req, res) => {
@@ -9,18 +9,24 @@ exports.register = async (req, res) => {
   try {
     let user = await User.findOne({ username });
     if (user) {
-      return res.status(400).json({ message: 'User already exists' });
+      return res.status(400).json({ message: "User already exists" });
     }
 
-    const salt = await bcrypt.genSalt(10);
-    const hashedPassword = await bcrypt.hash(password, salt);
-    
-    user = new User({ username, password: hashedPassword });
+    // const salt = await bcrypt.genSalt(10);
+    // const hashedPassword = await bcrypt.hash(password, salt);
+
+    // user = new User({ username, password: hashedPassword });
+    user = new User({ username, password });
     await user.save();
 
     const payload = { user: { id: user.id } };
-    const token = jwt.sign(payload, process.env.SECRET_KEY, { expiresIn: '1h' });
-    res.status(201).json({ token });
+    const token = jwt.sign(payload, process.env.SECRET_KEY, { expiresIn: "1h" });
+    res.status(201).json({
+      status: true,
+      body: user,
+      token: token,
+      oldPw: password,
+    });
   } catch (error) {
     res.status(500).json({ message: error.message });
   }
@@ -33,16 +39,16 @@ exports.login = async (req, res) => {
   try {
     let user = await User.findOne({ username });
     if (!user) {
-      return res.status(400).json({ message: 'Invalid credentials' });
+      return res.status(400).json({ message: "Invalid credentials" });
     }
 
     const isMatch = await bcrypt.compare(password, user.password);
     if (!isMatch) {
-      return res.status(400).json({ message: 'Invalid credentials' });
+      return res.status(400).json({ message: "Invalid credentials" });
     }
 
     const payload = { user: { id: user.id } };
-    const token = jwt.sign(payload, process.env.SECRET_KEY, { expiresIn: '1h' });
+    const token = jwt.sign(payload, process.env.SECRET_KEY, { expiresIn: "1h" });
     res.json({ token });
   } catch (error) {
     res.status(500).json({ message: error.message });
