# routes/authRoutes.js
@@ -1,17 +1,21 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const { register, login } = require('../controllers/authController');
-const authMiddleware = require('../middleware/authMiddleware');
+const { register, login } = require("../controllers/authController");
+const authMiddleware = require("../middleware/authMiddleware");
 
 // Registrasi pengguna baru
-router.post('/register', register);
+router.post("/register", register);
 
 // Login pengguna
-router.post('/login', login);
+router.post("/login", login);
+
+router.get("/", (r, q) => {
+  q.send("Halo");
+});
 
 // Route yang dilindungi
-router.get('/protected-route', authMiddleware, (req, res) => {
-    res.json({ message: 'You have access to this route', user: req.user });
+router.get("/protected-route", authMiddleware, (req, res) => {
+  res.json({ message: "You have access to this route", user: req.user });
 });
 
 module.exports = router;
